# interview-exercises

./: LICENSE  README.md  conanfile.py
cpp_cmake_conan/: BUILD.md  CMakeLists.txt  Dockerfile  README.md  conanfile.py  conanfile.txt  project-meta-info.in
cpp_cmake_conan/app/: CMakeLists.txt  main.cpp  project-meta-info.in  sources.cmake
cpp_cmake_conan/app/include/: include.h
cpp_cmake_conan/app/mypkg/: conanfile.py
cpp_cmake_conan/app/mypkg/test_package/: conanfile.py
cpp_cmake_conan/app/src/: main.cpp
cpp_cmake_conan/test_package/: CMakeLists.txt  conanfile.py  example.cpp
cpp_cmake_conan/tests/: CMakeLists.txt  greeting_test.cpp  project-meta-info.in
